Issue #3219285 by Nitebreed: Selection modal of Layout Paragraphs doesn't show a scrollbar anymore

--- a/styles/components/_entity_reference_layout.scss
+++ b/styles/components/_entity_reference_layout.scss
@@ -255,7 +255,7 @@
   &--layout,
   &--content {
     justify-content: flex-start;
-    overflow-y: hidden;
+    overflow-x: hidden;
     padding-bottom: .25rem;
   }
 
