--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -282,7 +282,7 @@ $maxWidth: 520px;
       }
     }
 
-    &:active, &:focus {
+    &:active, &:focus, &:hover:focus {
       box-shadow: inset 0 0 0 5px var(--colorGinPrimary),
                   0 0 0 2px var(--colorGinLayerBackground),
                   0 0 0 4px var(--colorGinFocus);
