--- a/styles/components/_node-preview.scss
+++ b/styles/components/_node-preview.scss
@@ -2,6 +2,7 @@
   position: sticky;
   top: 0;
   width: 100%;
+  padding: 0;
   background: rgba($colorAppBackground, .98);
   border-bottom: 1px solid var(--colorGinLayerBorder);
 
